--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "rollup 构建的常用工具函数库",
   "main": "index.js",
   "scripts": {
+    "dev": "rollup -wc rollup.config.dev.js",
+    "build": "rollup -c rollup.config.dev.js",
+    "build:prod": "rollup -c rollup.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +21,18 @@
   "bugs": {
     "url": "https://github.com/luozyiii/tools/issues"
   },
-  "homepage": "https://github.com/luozyiii/tools#readme"
+  "homepage": "https://github.com/luozyiii/tools#readme",
+  "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/node": "^7.14.2",
+    "rollup": "^2.50.5",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^7.0.2"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.14.4"
+  }
 }
