--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
+    "@babel/preset-env": "^7.14.4",
     "rollup": "^2.50.5",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -32,7 +33,5 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2"
   },
-  "dependencies": {
-    "@babel/preset-env": "^7.14.4"
-  }
+  "dependencies": {}
 }
